# SmartQL

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  smartql.spec
.github/workflows/: build-binary.yml  ci.yml  publish-image.yml  publish.yml
docs/: schema-reference.md
examples/ecommerce/: smartql.yml
examples/trakli/: smartql.yml
src/smartql/: __init__.py  cache.py  cli.py  core.py  database.py  exceptions.py  generator.py  llm.py  result.py  schema.py  security.py  server.py
tests/: test_database.py  test_env_interpolation.py  test_format_type.py
