[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartql"
version = "0.1.0"
description = "Natural Language to SQL - Database First"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "WhileSmart", email = "hello@whilesmart.com"}
]
keywords = ["sql", "natural-language", "llm", "database", "ai", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "litellm>=1.40.0",
    "sqlglot>=23.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pymysql>=1.1.2",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
server = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]
postgres = ["psycopg2-binary>=2.9.0"]
mysql = ["pymysql>=1.1.0"]
redis = ["redis>=5.0.0"]
all = [
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "redis>=5.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
smartql = "smartql.cli:main"

[project.urls]
Homepage = "https://github.com/smartql/smartql"
Documentation = "https://smartql.dev/docs"
Repository = "https://github.com/smartql/smartql"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
